# python-project-52

./: .gitignore  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml  requirements.txt  sonar-project.properties
labels/: forms.py  models.py  urls.py  views.py
labels/migrations/: 0001_initial.py
my_task_manager/: apps.py  forms.py  models.py  views.py
my_task_manager/migrations/: 0001_initial.py  0002_task.py
statuses/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/: settings.py  urls.py
task_manager/info/: apps.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/my_task_manager/: apps.py  views.py
task_manager/statuses/: apps.py  forms.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filter.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  (+8 more)
task_manager/templates/: login.html  registration.html
task_manager/tests/: test_labels.py  test_statuses.py  test_tasks.py  test_users.py
task_manager/users/: forms.py  urls.py  views.py
tasks/: forms.py  models.py  urls.py  views.py
tasks/migrations/: 0002_task_description_task_labels.py  0004_remove_task_author.py
templates/: create_status.html  index.html  login.html  login_index.html  registration.html  status_confirm_delete.html  status_list.html  status_update.html  task_list.html  update_user.html  user_confirm_delete.html  user_list.html
templates/labels/: create_label.html
templates/statuses/: create_status.html  status_confirm_delete.html  status_list.html  status_update.html
templates/tasks/: create_task.html  style.css  task_confirm_delete.html  task_list.html
templates/users/: user_list.html
users/: forms.py  urls.py  views.py
(+10 files in other folders)
