[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crispy-bootstrap5>=2025.4",
    "dj-database-url>=2.3.0",
    "django>=5.2",
    "django-crispy-forms[bootstrap5]>=2.4",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "poetry>=2.1.3",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "rollbar>=1.3.0",
]
